syntax = "proto3";

package comment;

service CommentService {
  rpc CreateComment (CreateCommentRequest) returns (CommentResponse);
  rpc GetComments (GetCommentsRequest) returns (CommentsList);
}

message CreateCommentRequest {
  int32 ticketId = 1;
  int32 userId = 2;
  string content = 3;
}

message GetCommentsRequest {
  int32 ticketId = 1;
}

message CommentResponse {
  int32 id = 1;
  string content = 2;
  int32 userId = 3;
  int32 ticketId = 4;
}

message CommentsList {
  repeated CommentResponse comments = 1;
}
